# segmentation-sgm

./: CMakeLists.txt  README.md
cpu_segsgm/: CMakeLists.txt  segmentation_sgm.cpp  segmentation_sgm.h
include/: segmentation_sgm.h
samples/benchmark/: CMakeLists.txt  main.cpp
samples/camera_parameters/: kitti.xml
samples/movie/: CMakeLists.txt  main.cpp
samples/movie_with_libsgm/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  device_buffer.h  internal.h  interval_timer.h  macro.h  parameters.h  segmentation_sgm.cpp  segmentation_sgm.cu
test/: CMakeLists.txt  horizontal_median_test.cpp  integration_test.cpp  reference.cpp  reference.h  scan_cost_test.cpp  test_utility.h
test/data/: line.txt
